test/fail/SortDependingOnIndex.agda

module SortDependingOnIndex where

open import Common.Level

data Bad : (l : Level) → Set l where
